Vezba 3/Z5/2/zad2.output
State 6 conflicts: 1 shift/reduce
State 7 conflicts: 1 shift/reduce
State 10 conflicts: 1 shift/reduce


Grammar

    0 $accept: word $end

    1 word: %empty
    2     | word _WORD
    3     | word _DOT n
    4     | word _CAPITAL_WORD e

    5 e: %empty
    6  | e _DOT n

    7 n: %empty
    8  | n _WORD


Terminals, with rules where they appear

$end (0) 0
error (256)
_WORD (258) 2 8
_DOT (259) 3 6
_CAPITAL_WORD (260) 4


Nonterminals, with rules where they appear

$accept (6)
    on left: 0
word (7)
    on left: 1 2 3 4, on right: 0 2 3 4
e (8)
    on left: 5 6, on right: 4 6
n (9)
    on left: 7 8, on right: 3 6 8


State 0

    0 $accept: . word $end

    $default  reduce using rule 1 (word)

    word  go to state 1


State 1

    0 $accept: word . $end
    2 word: word . _WORD
    3     | word . _DOT n
    4     | word . _CAPITAL_WORD e

    $end           shift, and go to state 2
    _WORD          shift, and go to state 3
    _DOT           shift, and go to state 4
    _CAPITAL_WORD  shift, and go to state 5


State 2

    0 $accept: word $end .

    $default  accept


State 3

    2 word: word _WORD .

    $default  reduce using rule 2 (word)


State 4

    3 word: word _DOT . n

    $default  reduce using rule 7 (n)

    n  go to state 6


State 5

    4 word: word _CAPITAL_WORD . e

    $default  reduce using rule 5 (e)

    e  go to state 7


State 6

    3 word: word _DOT n .
    8 n: n . _WORD

    _WORD  shift, and go to state 8

    _WORD     [reduce using rule 3 (word)]
    $default  reduce using rule 3 (word)


State 7

    4 word: word _CAPITAL_WORD e .
    6 e: e . _DOT n

    _DOT  shift, and go to state 9

    _DOT      [reduce using rule 4 (word)]
    $default  reduce using rule 4 (word)


State 8

    8 n: n _WORD .

    $default  reduce using rule 8 (n)


State 9

    6 e: e _DOT . n

    $default  reduce using rule 7 (n)

    n  go to state 10


State 10

    6 e: e _DOT n .
    8 n: n . _WORD

    _WORD  shift, and go to state 8

    _WORD     [reduce using rule 6 (e)]
    $default  reduce using rule 6 (e)
